# NChunk

./: .env.example  .gitignore  .pre-commit-config.yaml  NChunk.py  README.md  README_EN.md  Upload.py  chunks.py  creds.py  main.py  pyproject.toml  pytest.ini  pyvenv.cfg  requirements.txt  ux.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  release.yml
NChunk/: NChunk.py
Scripts/: activate  activate.bat
src/: Upload.py
src/nchunk/: __init__.py  cli.py  progress.py  uploader.py
tests/: test_credentials.py  test_utils.py
