[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "nchunk"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = ["aiohttp>=3.9","aiofiles>=23.2","typer[all]>=0.12","rich>=13.7","keyring>=24.3","python-dotenv>=1.0"]
[project.scripts]
nchunk = "nchunk.cli:app"
[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "ruff>=0.4.3",
    "pre-commit>=3.7"
]