[build-system]
requires = ["hatchling>=1.24",
 "hatch-vcs>=0.4"]
build-backend = "hatchling.build"


[tool.hatch.version]
source = "vcs"              # Version wird via Git-Tag gelesen
tag-pattern = "v{version}"  # Tag-Schema

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/nchunk"]

[tool.hatch.envs.dev]
dependencies = ["pytest", "pytest-asyncio", "ruff", "pre-commit", "aioresponses"]

[tool.hatch.publish.index]
# leer lassen ⇒ PyPI, ansonsten:
# username = "__token__"
# password = "pypi-AgEI..."


[project]
name = "nchunk"
authors= [
    {name= "Johannes Mueller", email="kex1.jml@gmail.com"}
]
description = "A Python Module for chunked uploading to Nextcloud DAV"
readme = "README_EN.md"
license = "GPL-3.0-or-later"
#version="0.4.0"
requires-python = ">=3.11"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Environment :: Console",
  "Topic :: Internet :: File Transfer Protocol (FTP)",
  "Topic :: System :: Networking",
]
dependencies = ["aiohttp>=3.9","aiofiles>=23.2","typer>=0.12","rich>=13.7","keyring>=24.3","python-dotenv>=1.0"]
[project.scripts]
nchunk = "nchunk.cli:app"
[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "ruff>=0.4.3",
    "pre-commit>=3.7",
     "hatch-vcs>=0.4"
]